templates/msm_template.yaml
---
# Source: msm/templates/service.yaml
# webhook
apiVersion: v1
kind: Service
metadata:
  name: msm-admission-webhook-svc
  namespace: default
  labels:
    app: msm-admission-webhook
    helm.sh/chart: msm-0.1.17
    app.kubernetes.io/name: msm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - name: ssl
      port: 443
      targetPort: 443
  selector:
    app: msm-admission-webhook
---
# Source: msm/templates/service.yaml
#msm-control-plane-svc
apiVersion: v1
kind: Service
metadata:
  name: msm-cp
  namespace: default
  labels:
    msm: cp
    helm.sh/chart: msm-0.1.17
    app.kubernetes.io/name: msm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - name: grpc
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    msm: cp
---
# Source: msm/templates/daemonset.yaml
# cni
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: msm-cni
  namespace: default
  labels:
    app: msm-cni
    helm.sh/chart: msm-0.1.17
    app.kubernetes.io/name: msm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app: msm-cni
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: msm-cni
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      hostNetwork: true
      tolerations:
        - effect: NoExecute
          operator: Exists
      priorityClassName: system-node-critical
      serviceAccountName: msm-cni
      # Minimize downtime during a rolling upgrade or deletion; tell Kubernetes to do a "force
      # deletion": https://kubernetes.io/docs/concepts/workloads/pods/pod/#termination-of-pods.
      terminationGracePeriodSeconds: 5
      containers:
        # This container installs the MSM CNI binaries
        # and CNI network config file on each node.
        - name: installer
          image: "ghcr.io/media-streaming-mesh/msm-cni:latest"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
          command: ["installer"]
          volumeMounts:
            - mountPath: /host/opt/cni/bin
              name: cni-bin-dir
            - mountPath: /host/etc/cni/net.d
              name: cni-net-dir
      volumes:
        # Used to install CNI.
        - name: cni-bin-dir
          hostPath:
            path: /opt/cni/bin
        - name: cni-net-dir
          hostPath:
            path: /etc/cni/net.d
---
# Source: msm/templates/daemonset.yaml
# msm-gateway
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: msm-gateway
  namespace: default
  labels:
    msm: gateway
    helm.sh/chart: msm-0.1.17
    app.kubernetes.io/name: msm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      msm: gateway
  template:
    metadata:
      labels:
        msm: gateway
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: msm-proxy
          image: "ghcr.io/media-streaming-mesh/msm-dp:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: rtp
              protocol: UDP
              containerPort: 8050
            - name: rtcp
              protocol: UDP
              containerPort: 8051
            - name: grpc
              protocol: TCP
              containerPort: 9000
          readinessProbe:
            exec:
              command: ["grpc-health-probe", "-addr=:9000"]
            initialDelaySeconds: 2
          livenessProbe:
            exec:
              command: ["grpc-health-probe", "-addr=:9000"]
            initialDelaySeconds: 10
        - name: msm-rtsp-stub
          image: "ghcr.io/media-streaming-mesh/msm-rtsp-stub:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: rtsp
              protocol: TCP
              containerPort: 8554
---
# Source: msm/templates/deployment.yaml
# webhook
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msm-admission-webhook
  namespace: default
  labels:
    app: msm-admission-webhook
    helm.sh/chart: msm-0.1.17
    app.kubernetes.io/name: msm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app: msm-admission-webhook
  template:
    metadata:
      labels:
        app: msm-admission-webhook
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      serviceAccount: msm-admission-webhook-sa
      containers:
        - name: msm-admission-webhook
          image: "ghcr.io/media-streaming-mesh/msm-admission-webhook:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - protocol: TCP
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /livenessz
              port: 8080
            initialDelaySeconds: 1
            periodSeconds: 3
            timeoutSeconds: 5
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
---
# Source: msm/templates/deployment.yaml
# msm-control-plane
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msm-control-plane
  namespace: default
  labels:
    msm: cp
    helm.sh/chart: msm-0.1.17
    app.kubernetes.io/name: msm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      msm: cp
  template:
    metadata:
      labels:
        msm: cp
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      serviceAccountName: msm-cp-sa
      containers:
        - name: msm-control-plane
          image: "ghcr.io/media-streaming-mesh/msm-cp:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              protocol: TCP
              containerPort: 9000
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
---
# Source: msm/templates/deployment.yaml
# msm-network-controller
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msm-network-controller
  namespace: default
  labels:
    msm: cp
    helm.sh/chart: msm-0.1.17
    app.kubernetes.io/name: msm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      msm: cp
  template:
    metadata:
      labels:
        msm: cp
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      serviceAccountName: msm-cp-sa
      containers:
        - name: msm-network-controller
          image: "ghcr.io/media-streaming-mesh/msm-nc:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              protocol: TCP
              containerPort: 9000
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
---
# Source: msm/templates/webhook.yaml
kind: MutatingWebhookConfiguration
apiVersion: admissionregistration.k8s.io/v1
metadata:
  name: msm-admission-webhook-default
  labels:
    helm.sh/chart: msm-0.1.17
    app.kubernetes.io/name: msm
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
- admissionReviewVersions:
    - v1
  name:  msm-admission-webhook-default.mediastreamingmesh.io
  clientConfig:
    service:
      name: msm-admission-webhook-svc
      namespace: default
      path: "/mutate"
      port: 443
  sideEffects: None
  objectSelector:
    matchExpressions:
    - key: sidecar.mediastreamingmesh.io/inject
      operator: In
      values:
      - "true"
  rules:
  - operations: [ "CREATE", "UPDATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    scope: "*"
  failurePolicy: Ignore
  timeoutSeconds: 10
